# BeautifulWiktionary

./: LICENSE  README.md  pyproject.toml
src/BeautifulWiktionary/: beautifulwiktionary.py
