[project]
name = "BeautifulWiktionary"
version = "0.0.3"
authors = [
   { name="Alan Duncan", email="duncan.alan@me.com" }
]
description = "Facilitate scraping Wiktionary sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
