[project]
name = "BeautifulWiktionary"
version = "0.0.4"
authors = [
   { name="Alan Duncan", email="duncan.alan@me.com" }
]
description = "Facilitate scraping Wiktionary sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project.urls]
"Homepage" = "https://github.com/NSBum/BeautifulWiktionary"
"Bug Tracker" = "https://github.com/NSBum/BeautifulWiktionary/issues"
